  fields which will be removed. This allows for easier copy & paste from order
  lists.

Bugs:
- PS: Error after fresh install: Type Error: Return value of
  \Siel\Acumulus\PrestaShop\Config\ConfigStore::load() must be of the type
  array, bool returned.
- PS: Some changes had to be made to be compatible with PS 8.0.


7.6.0 (2023-01-17) (WC only)
----------------------------
Features:
- ALL: A new setting "Do you charge EU VAT?" replaces the setting "Which tax
  classes define EU vat rates?" and this new setting is only used in case no
  choice can be made between EU VAT and Dutch VAT.
- WC: Support for the free version of the "EU/UK VAT Compliance for WooCommerce"
  plugin (from David Anderson). Especially the setting "Tax classes used for
  customer place-of-supply goods" is used to select the vat type for an invoice
  where the vat rates of the country-of-supply are the same as in the
  Netherlands.
  NOTE: This setting trumps the new setting introduced above, so, please update
  this setting when you change from Dutch to Foreign VAT or back!!!
  NOTE: vat exempt invoices are part of the premium version of this invoice. We
  don't currently have the code of that version, so we cannot know what meta key
  is used to store vat numbers. Please let us know if you have this plugin.

Bugs:
- We do no longer throw an exception when the HTTP status code and the response
  status are inconsistent. The Acumulus API can return inconsistent status codes
  for some calls.
- Number class: We do no longer require float values to be strict floats, but
  they must be convertible to float (in a rather strict sense). This will
  prevent errors like TypeError: Argument 2 passed to Number::floatsAreEqual()
  must be of the type float, string given, defined in Number.php:76.
- WC: TypeError: Siel\Acumulus\WooCommerce\Helpers\Token::getObjectProperty():
  Return value must be of type ?string, array returned in getObjectProperty:31.

Refactorings: